--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ad Block Detection Demo</title>
-    <script src="detect-ab.js" async></script>
+    <script src="./detect-ab.js" async></script>
     <style>
         .info {
             background: forestgreen;
